<resources>
    <string name="app_name">lab3app</string>
    <string name="preference_key_university_list">university_list</string>
    <string name="preference_key_faculty_list">faculty_list</string>
    <string name="DeleteGroup">Удалить группу</string>
    <string name="DeleteUniversity">Удалить</string>
    <string name="NewGroup">Добавить группу</string>
    <string name="NewUniversity">Добавить университет</string>
    <string name="UpdateGroup">Обновить Группу</string>
    <string name="UpdateUniversuty">Изменить</string>
    <string-array name="SEX">
        <item>Женский</item>
        <item>Мужской</item>
    </string-array>
</resources>